[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-unlocker"
version = "0.2"
description = "SSH unlocker for unattended unlock of LUKS encrypted LVM or root disk partition using cryptsetup"
readme = "README.md"
authors = [
    { name = "Viktor Stískala", email = "viktor@stiskala.cz" }
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "asyncssh==2.22.0",
    "bcrypt==5.0.0",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/ViktorStiskala/cryptsetup-ssh-unlocker"

[project.scripts]
ssh-unlocker = "unlock:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
]

[tool.setuptools]
py-modules = ["unlock"]
packages = ["unlocker"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--cov=unlocker --cov=unlock --cov-report=term-missing"
testpaths = ["tests"]
